# cookiecutter-django-secure-duarteluis

./: Readme.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/apps/accounts/: adapter.py  admin.py  forms.py  mfa_adapter.py  middleware.py  models.py
{{cookiecutter.project_slug}}/apps/accounts/templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
{{cookiecutter.project_slug}}/apps/accounts/templates/account/email/: email_confirmation_message.html  email_confirmation_message.txt  email_confirmation_message_subject.txt  email_confirmation_signup_message.html  email_confirmation_signup_message.txt  password_reset_key_message.html  password_reset_key_message.txt
{{cookiecutter.project_slug}}/apps/accounts/templates/accounts/: onboarding.html  profile.html
{{cookiecutter.project_slug}}/apps/accounts/templates/accounts/sessions/: confirm_delete.html  list.html
{{cookiecutter.project_slug}}/apps/accounts/urls/: onboarding.py  profile.py  sessions.py
{{cookiecutter.project_slug}}/apps/accounts/views/: onboarding.py  profile.py  sessions.py
{{cookiecutter.project_slug}}/templates/: base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  celery.py  settings.py  settings_csp.py  settings_security.py  settings_sessions.py  urls.py  wsgi.py
